--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <!-- Formspree Form -->
         <!-- IMPORTANT: Replace YOUR_EMAIL_HERE with your actual email address -->
-        <form action="https://formspree.io/f/anvayatre@gmail.com" method="POST" class="space-y-6">
+        <form action="https://formspree.io/f/xldwdeoo" method="POST" class="space-y-6">
             
             <!-- Contact Information Section -->
             <div class="space-y-4">
